# pythonic-kittens

./: .gitignore  Makefile  README.md  pyproject.toml
src/pythonic_kittens/cards/: __init__.py  cards.py  deck.py  discard.py  factories.py
src/pythonic_kittens/game/: __init__.py  game.py  game_factory.py
src/pythonic_kittens/player/: player.py
tests/cards/: test_deck.py  test_deck_factories.py
tests/game/: test_game.py  test_game_factory.py
tests/player/: test_player.py
